--- a/src/main/resources/graphql-playground.html
+++ b/src/main/resources/graphql-playground.html
@@ -4,7 +4,7 @@
   <meta charset=utf-8/>
   <meta name="viewport"
         content="user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, minimal-ui">
-  <title>Graphcool Playground</title>
+  <title>Sangria GraphQL Finatra Example</title>
   <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/graphql-playground/build/static/css/index.css"/>
   <link rel="shortcut icon" href="//cdn.jsdelivr.net/npm/graphql-playground/build/favicon.png"/>
   <script src="//cdn.jsdelivr.net/npm/graphql-playground/build/static/js/middleware.js"></script>
